1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES, lib_LTLIBRARIES): Substitute
	{inst,noinst}LIBS.
	(EXTRA_LTLIBRARIES): New variable.
	(libobjectbase_la_LDFLAGS): Substitute inst_LDFLAGS.

	* swarm_rts_routines.m: Include misc.h.

1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* objectbase.h: Include externvar.h.

	* Makefile.am (INCLUDES): Add -I$(top_builddir)/libobjc.

1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Arguments.m (swarm_version): Add externvardef.

	* probing.m (probeLibrary): Add externvardef.

	* objectbase.h: Use `externvar' for external variables.

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES): Switch from lib_LTLIBRARIES.
	(FFIINCLUDES): Remove.
	(INCLUDES): Don't include FFIINCLUDES.

1999-04-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* objectbase.h (MessageProbe), MessageProbe.[hm] ([MessageProbe
	-longDynamicCallOn:]): Replaces intDynamicCallOn:

	* MessageProbe.m ([MessageProbe -objectDynamicCallOn:]): Permit
	objects to be selectors.

1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbe.m: Include swarmconfig.h.
	([VarProbe -probeAsPointer:]): Use PTRUINT instead of locally-defined
	PTRINT.  Remove local definition.

1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MessageProbe.m (dynamicCallOn): Use JFINDJAVA instead of
	respondsTo: + JavaProxy check.

1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MessageProbe.m: Remove support for avcall; use FArguments/FCall
	support.
	(dynamicCallOn): Cast retVal.val.object to jstring, jobject for
	use with java_copy_string, JFINDOBJC, respectively.

1999-04-24  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* MessageProbe.m (dynamicCallOn): Don't truncate method
	name if there are no colons.

1999-04-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MessageProbe.m (dynamicCallOn): Add respondsTo: as a sufficient